# apis-webpage

./: .gitignore  CHANGELOG.md  README.rst  forms.py  pyproject.toml  urls.py  views.py
.github/workflows/: black.yml  djlint.yml  release-please.yml  ruff.yml
context_processors/: custom_context_processors.py
static/webpage/: apis.css  apis_highlighter.js  autocomplete_js_tooltips.js
static/webpage/css/: cetei.css
static/webpage/libraries/: bower.json
static/webpage/libraries/bower_components/: .gitignore
templates/webpage/: base.html  index.html  presentation_innsbruck17.html  presentation_lyon17.html  presentations_list.html
webpage/: tests.py  urls.py  utils.py  views.py  webpage_content_processors.py
webpage/management/commands/: run_ontology_script.py
webpage/templates/webpage/: 404-error.html  about.html  base.html  confirm_delete.html  imprint.html  index.html  team.html  uri_resolver.html  user_login.html  user_logout.html
webpage/templates/webpage/tags/: column_selector.html  social_media.html
webpage/templatetags/: browsing_extras.py  webpage_extras.py
