[tool.poetry]
name = "webpage"
version = "0.1"
description = "Webpage frontend for APIS projects"
authors = ["Matthias Schlögl <m.schloegl@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
Django = ">=3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
